<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017-2018 Mikhail Vasilyev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">NTNUI Tennis</string>
    <string name="menu_prev_week">Previous week</string>
    <string name="menu_next_week">Next week</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_login">Login</string>
    <string name="menu_about">About</string>
    <string name="slot_btn_attend">Attend</string>
    <string name="slot_btn_attend_not">Not going</string>
    <string name="menu_notifications">Notifications</string>
    <string name="notifications_title">Receive notifications about selected hours:</string>
    <string name="menu_not_save">Save</string>
    <string name="home_url">http://org.ntnu.no/tennisgr/</string>
    <string name="email_prompt">Enter your email:</string>
    <string name="password_prompt">Enter your password:</string>
    <string name="password_hint">Type your PIN-code here...</string>
    <string name="email_hint">Type your email here...</string>
    <string name="credentials_dialog_title">Login</string>
    <string name="lang_prompt">Choose language:</string>
    <string name="login_toast">Login successful!</string>
    <string-array name="lang_array">
        <item>Norwegian</item>
        <item>English</item>
    </string-array>
    <string name="notification_ticker">Tennis</string>
    <string name="notification_title">Tennis session available</string>
    <string name="notification_text">Available spot in %1s tennis session!</string>
    <string name="notification_cookie_title">Login error</string>
    <string name="notification_cookie_text">Press to renew your login information automatically.</string>
    <string name="menu_back">Back</string>
    <string name="checkbox_notifications_prompt">Receive notification about this session</string>
    <string name="preferences_title_version">Build version</string>
    <string name="preferences_title_author">Author</string>
</resources>
